--- a/omid/index.html
+++ b/omid/index.html
@@ -16,9 +16,9 @@
 
       <section class="back1">
   
-        <nav style="padding-bottom: 800px;">
+        <nav class="center" style="">
           <div>
-            <ul id="" Class="Navega">
+            <ul id="">
             <li><a href="#">A Omid</a></li>
             <li><a href="#">Produtos</a></li>
             <li><a href="#">Nossos Datacenters</a></li>
@@ -27,7 +27,10 @@
           </div>  
         </nav>  
 
-        <div>
+        <div class="container">
+        <div class="col l2 m4 s6 offset-l5 offset-m4 offset-s3" style="align-content: center;"> 
+          <img class="logo middle" alt="logo Omid" src="img/omid.png">
+        </div>
         </div>
 
       </section>
