--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
           </div>  
         </nav>  
 
+        <div class="row">
         <div class="container">
         <div class="col l2 m4 s6 offset-l5 offset-m4 offset-s3" style="align-content: center;"> 
-          <img class="logo middle" alt="logo Omid" src="img/omid.png">
+          <div><img class="logo middle" alt="logo Omid" src="img/omid.png"></div>
         </div>
         </div>
+      </div>
 
       </section>
       <!--JavaScript at end of body for optimized loading-->
